--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
+/* body {
+    Apply global styles here
+} */
