--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,30 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 
 /* body {
     Apply global styles here
 } */
+
+.bg-board {
+  background: radial-gradient(
+    circle,
+    rgba(245, 222, 179, 0.7),
+    rgba(210, 180, 140, 0.7)
+  );
+}
+.bg-modal {
+  background-color: rgba(245, 222, 179, 0.9);
+}
+
+.icon:hover {
+  cursor: pointer;
+}
+
+.font-lora-italic-bold {
+  font-family: 'Lora', serif;
+  font-style: italic;
+  font-weight: 700;
+}
+.font-lora-semibold {
+  font-family: 'Lora', serif;
+  font-weight: 400;
+}
